@@ -1,3 +1,12 @@
+2009-07-13  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        Reviewed by Ariya Hidayat.
+
+        Fix qdoc warnings for QWebPage::shouldInterruptJavaScript() and mention
+        how to re-implement it.
+
+        * Api/qwebpage.cpp:
+
 2009-07-13  Simon Hausmann  <hausmann@webkit.org>
 
         Reviewed by Ariya Hidayat.
